tests/fixtures/valid/return_int_literal.torel
unit fixtures.return_int_literal;

export proc main() -> Int32 {
    return 42;
}
