tests/fixtures/invalid/while_condition_not_bool.torel
unit fixtures.while_condition_not_bool;

export proc main() -> Int32 {
    while 1 {
        return 42;
    }

    0
}
